--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -31,13 +31,47 @@
   }
 }
 
+@media (max-width: 768px) {
+  .playerContainer {
+    width: 100%;
+  }
+}
+
+.currentEpisode {
+  text-align: center;
+
+  img {
+    width: 100%;
+    border-radius: 1.5rem;
+
+    background-size: cover;
+  }
+
+  strong {
+    display: block;
+    margin-top: 2rem;
+    font: 600 1.25rem Lexend, sans-serif;
+    line-height: 1.75rem;
+  }
+
+  span {
+    display: block;
+    margin-top: 1rem;
+    opacity: 0.6;
+    line-height: 1.5rem;
+  }
+}
 
 .emptyPlayer {
   width: 100%;
   height: 20rem;
   border: 1.5px dashed var(--purple-300);
   border-radius: 1.5rem;
-  background: linear-gradient(143.8deg, rgba(145, 100, 250, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(
+    143.8deg,
+    rgba(145, 100, 250, 0.8) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
 
   padding: 4rem;
   text-align: center;
@@ -72,6 +106,10 @@
   }
 }
 
+.rc-slider-handle {
+  left: 5% !important;
+}
+
 .buttons {
   display: flex;
   align-items: center;
@@ -85,6 +123,14 @@
     font-size: 0;
     transition: filter 0.2s;
 
+    &:disabled {
+      cursor: default;
+    }
+
+    &:hover:not(:disabled) {
+      filter: brightness(0.7);
+    }
+
     &.playButton {
       width: 4rem;
       height: 4rem;
@@ -93,7 +139,7 @@
       transition: filter 0.2s;
 
       &:hover {
-        filter: brightness(0.95)
+        filter: brightness(0.95);
       }
     }
   }
